Build/third-party-libraries/packages/nuget.org/system.xml.xpath/4.0.1/readme.md
System.Xml.XPath [4.0.1](https://www.nuget.org/packages/System.Xml.XPath/4.0.1)
--------------------

Used by: AspNetCoreNSwag

Target frameworks: net5.0, net6.0, net7.0, netcoreapp3.0

License: [ms-net-library](../../../../licenses/ms-net-library) 

- package license: [ms-net-library](http://go.microsoft.com/fwlink/?LinkId=329770) 
- project license: [Unknown](https://dot.net/) , License should be verified on https://dot.net/

Description
-----------
Provides the classes that define a cursor model for navigating and editing Extensible Markup Language (XML) information items as instances of the XQuery 1.0 and XPath 2.0 Data Model.

Commonly Used Types:
System.Xml.XPath.XPathNavigator
System.Xml.XPath.IXPathNavigable
System.Xml.XPath.XPathNodeType
System.Xml.XPath.XPathNodeIterator
System.Xml.XPath.XPathExpression
System.Xml.XPath.XPathResultType
System.Xml.XPath.XPathException
System.Xml.XPath.XPathDocument
System.Xml.XPath.XPathItem
System.Xml.XPath.XPathNamespaceScope
 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 2
-----------

|Name|Version|
|----------|:----|
|[System.Threading](../../../../packages/nuget.org/system.threading/4.0.11)|4.0.11|
|[System.Xml.ReaderWriter](../../../../packages/nuget.org/system.xml.readerwriter/4.0.11)|4.0.11|

*This page was generated by a tool.*