Build/third-party-libraries/packages/nuget.org/system.xml.xpath/4.3.0/readme.md
System.Xml.XPath [4.3.0](https://www.nuget.org/packages/System.Xml.XPath/4.3.0)
--------------------

Used by: AspNetCore internal, AspNetCoreNSwag internal, AspNetCoreSwashbuckle internal, Core internal, DesignTime internal, SelfHost internal

Target frameworks: net461, net5.0, netcoreapp2.1, netcoreapp3.1

License: [ms-net-library](../../../../licenses/ms-net-library) 

- package license: [ms-net-library](http://go.microsoft.com/fwlink/?LinkId=329770) 
- project license: [Unknown](https://dot.net/) , License should be verified on https://dot.net/

Description
-----------
Provides the classes that define a cursor model for navigating and editing Extensible Markup Language (XML) information items as instances of the XQuery 1.0 and XPath 2.0 Data Model.

Commonly Used Types:
System.Xml.XPath.XPathNavigator
System.Xml.XPath.IXPathNavigable
System.Xml.XPath.XPathNodeType
System.Xml.XPath.XPathNodeIterator
System.Xml.XPath.XPathExpression
System.Xml.XPath.XPathResultType
System.Xml.XPath.XPathException
System.Xml.XPath.XPathDocument
System.Xml.XPath.XPathItem
System.Xml.XPath.XPathNamespaceScope
 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 2
-----------

|Name|Version|
|----------|:----|
|[System.Threading](../../../../packages/nuget.org/system.threading/4.3.0)|4.3.0|
|[System.Xml.ReaderWriter](../../../../packages/nuget.org/system.xml.readerwriter/4.3.0)|4.3.0|

*This page was generated by a tool.*